--- a/bda-modulo-1-evaluacion-final-irurme.ipynb
+++ b/bda-modulo-1-evaluacion-final-irurme.ipynb
@@ -5,8 +5,158 @@
    "execution_count": null,
    "id": "023b86cc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 121 (3182506310.py, line 123)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 123\u001b[1;36m\u001b[0m\n\u001b[1;33m    cantidad_elegida = int(input(\"Por favor, indique la cantidad de producto que desea comprar\"))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 121\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Crear una clase llamada Tienda Online\n",
+    "class TiendaOnline:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "\n",
+    "        # para almacenar productos en el inventario. Lista de diccionarios. Cada productos es un diccionario\n",
+    "        self.inventario = []    # cada dicc = {nombre, precio, cantidad}\n",
+    "\n",
+    "\n",
+    "        # para llevar el registro de clientes. Cada cliente es un diccionario\n",
+    "        self.clientes = {}  # cada dicc = {nombre, mail, compras}\n",
+    "\n",
+    "        # para el registro de las ventas totales. \n",
+    "        self.ventas_totales = 0.0  # es float\n",
+    "\n",
+    "# 1 Agregar producto:\n",
+    "\n",
+    "    def agregar_producto(self, nombre, precio, cantidad):\n",
+    "\n",
+    "            for producto in self.inventario:\n",
+    "\n",
+    "                # si ya existe, actualizamos la cantidad\n",
+    "                if producto[\"nombre\"] == nombre:\n",
+    "                    producto[\"cantidad\"] += cantidad\n",
+    "                    return\n",
+    "                \n",
+    "                else:\n",
+    "                    # si no existe, creamos un nuevo producto para la lista\n",
+    "                    nuevo_producto = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad}\n",
+    "                    self.inventario.append(nuevo_producto)\n",
+    "\n",
+    "    \n",
+    "# 2 Ver inventario:\n",
+    "\n",
+    "    def ver_inventario(self):\n",
+    "         \n",
+    "         # recorremos el inventario \n",
+    "         for producto in self.inventario:\n",
+    "\n",
+    "            # muestra los detalles del productos\n",
+    "            print(f\"Nombre: {producto['nombre']}, Precio: {producto['precio']}, Cantidad: {producto['cantidad']}\")\n",
+    "\n",
+    "\n",
+    "# 3 Buscar producto:\n",
+    "\n",
+    "    def buscar_producto(self,nombre):\n",
+    "         \n",
+    "         for producto in self.inventario:\n",
+    "             \n",
+    "             if producto[\"nombre\"] == nombre:\n",
+    "\n",
+    "                # muestra los detalles del producto\n",
+    "                print(f\"Nombre: {producto['nombre']}, Precio: {producto['precio']}, Cantidad: {producto['cantidad']}\")\n",
+    "\n",
+    "# si no se encuentra...\n",
+    "\n",
+    "\n",
+    "# 4 Actualizar stock:\n",
+    "\n",
+    "    def actualizar_stock(self, nombre, cantidad):\n",
+    "\n",
+    "        for producto in self.inventario:\n",
+    "\n",
+    "            # si el producto está en el inventario\n",
+    "            if producto[\"nombre\"] == nombre:\n",
+    "                # añadimos la cantidad indicada al stock existente\n",
+    "                producto[\"cantidad\"] += cantidad\n",
+    "                return\n",
+    "\n",
+    "            # si no está en el inventario\n",
+    "            else:\n",
+    "                print(f\"Este productos no está en el inventario\")\n",
+    "\n",
+    "              \n",
+    "# 5 Eliminar producto:\n",
+    "\n",
+    "    def eliminar_producto(self, nombre):\n",
+    "\n",
+    "        for producto in self.inventario:\n",
+    "\n",
+    "            if producto[\"nombre\"] == nombre:\n",
+    "                \n",
+    "                # eliminar el diccionario de la lista\n",
+    "                self.inventario.remove(producto)\n",
+    "                return\n",
+    "            \n",
+    "\n",
+    "# 6 Calcular Valor Inventario:\n",
+    "\n",
+    "    def calcular_valor_inventario(self):\n",
+    "        \n",
+    "        # defino una variable donde indicar el valor total del inventario\n",
+    "        valor_total_inventario = 0\n",
+    "\n",
+    "        for producto in self.inventario:\n",
+    "            valor_total_inventario += producto[precio] * producto [cantidad]\n",
+    "            return\n",
+    "\n",
+    "\n",
+    "# 7 Realizar compra:\n",
+    "\n",
+    "    def realizar_compra(self):\n",
+    "\n",
+    "        # creamos una varioable para el carrito donde añadiremos el nombre del producto y la cantidad de compra\n",
+    "        carrito_vacio = {}\n",
+    "\n",
+    "        # el cliente puede ir agregando productos hasta que indique \"salir\"\n",
+    "        while True:\n",
+    "            # muestramostramos el inventario\n",
+    "            self.ver_inventario()\n",
+    "\n",
+    "            # solicitamos al cliente los productos que desea o si desea finalizar la compra\n",
+    "            producto_elegido = input(\"Por favor, indique el nombre del producto que desea comprar o 'salir' si desea salir de la compra\")\n",
+    "\n",
+    "            # si desea finalizar la compra\n",
+    "            if producto_elegido == \"salir\":\n",
+    "                break\n",
+    "\n",
+    "            for producto in self.inventario:\n",
+    "\n",
+    "                if producto_elegido == producto[\"nombre\"]:\n",
+    "                    # si desea incluir productos al carrito\n",
+    "                    cantidad_elegida = int(input(\"Por favor, indique la cantidad de producto que desea comprar\"))\n",
+    "                    \n",
+    "                    if cantidad_elegida <= producto_elegido[\"cantidad\"]:\n",
+    "                        # Actualizar el carrito\n",
+    "                        if producto_elegido in carrito_vacio:\n",
+    "                            carrito_vacio[producto_elegido] += cantidad_elegida\n",
+    "                        else:\n",
+    "                            carrito_vacio[producto_elegido] = cantidad_elegida\n",
+    "\n",
+    "                        # actualizar el inventario\n",
+    "                        producto[\"cantidad\"] -= cantidad_elegida\n",
+    "\n",
+    "\n",
+    "                \n",
+    "        \n",
+    "\n",
+    "            \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -16,7 +166,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.7"
   }
  },
