--- a/bda-modulo-1-evaluacion-final-irurme.ipynb
+++ b/bda-modulo-1-evaluacion-final-irurme.ipynb
@@ -2,21 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "023b86cc",
+   "execution_count": 2,
+   "id": "3eb1ffea",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'if' statement on line 121 (3182506310.py, line 123)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[20], line 123\u001b[1;36m\u001b[0m\n\u001b[1;33m    cantidad_elegida = int(input(\"Por favor, indique la cantidad de producto que desea comprar\"))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block after 'if' statement on line 121\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Crear una clase llamada Tienda Online\n",
     "class TiendaOnline:\n",
     "\n",
     "    def __init__(self):\n",
@@ -42,10 +32,10 @@
     "                    producto[\"cantidad\"] += cantidad\n",
     "                    return\n",
     "                \n",
-    "                else:\n",
-    "                    # si no existe, creamos un nuevo producto para la lista\n",
-    "                    nuevo_producto = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad}\n",
-    "                    self.inventario.append(nuevo_producto)\n",
+    "            \n",
+    "            # si no existe, creamos un nuevo producto para la lista\n",
+    "            nuevo_producto = {\"nombre\": nombre, \"precio\": precio, \"cantidad\": cantidad}\n",
+    "            self.inventario.append(nuevo_producto)\n",
     "\n",
     "    \n",
     "# 2 Ver inventario:\n",
@@ -61,8 +51,10 @@
     "\n",
     "# 3 Buscar producto:\n",
     "\n",
+    "    # busca un producto en el inventario por el nombre\n",
     "    def buscar_producto(self,nombre):\n",
     "         \n",
+    "         # recorremos el inventario\n",
     "         for producto in self.inventario:\n",
     "             \n",
     "             if producto[\"nombre\"] == nombre:\n",
@@ -70,13 +62,12 @@
     "                # muestra los detalles del producto\n",
     "                print(f\"Nombre: {producto['nombre']}, Precio: {producto['precio']}, Cantidad: {producto['cantidad']}\")\n",
     "\n",
-    "# si no se encuentra...\n",
-    "\n",
     "\n",
     "# 4 Actualizar stock:\n",
     "\n",
     "    def actualizar_stock(self, nombre, cantidad):\n",
     "\n",
+    "        # recorremos el inventario\n",
     "        for producto in self.inventario:\n",
     "\n",
     "            # si el producto está en el inventario\n",
@@ -85,23 +76,27 @@
     "                producto[\"cantidad\"] += cantidad\n",
     "                return\n",
     "\n",
-    "            # si no está en el inventario\n",
-    "            else:\n",
-    "                print(f\"Este productos no está en el inventario\")\n",
+    "        # si no está en el inventario\n",
+    "        print(f\"Este productos no está en el inventario\")\n",
     "\n",
-    "              \n",
+    "\n",
     "# 5 Eliminar producto:\n",
     "\n",
     "    def eliminar_producto(self, nombre):\n",
     "\n",
+    "        # recorremos el inventario\n",
     "        for producto in self.inventario:\n",
     "\n",
+    "            # si el producto está en el inventario\n",
     "            if producto[\"nombre\"] == nombre:\n",
     "                \n",
     "                # eliminar el diccionario de la lista\n",
     "                self.inventario.remove(producto)\n",
     "                return\n",
     "            \n",
+    "        # si no está en el inventario\n",
+    "        print(f\"Este productos no está en el inventario\")\n",
+    "\n",
     "\n",
     "# 6 Calcular Valor Inventario:\n",
     "\n",
@@ -110,10 +105,11 @@
     "        # defino una variable donde indicar el valor total del inventario\n",
     "        valor_total_inventario = 0\n",
     "\n",
+    "        # recorremos el inventario\n",
     "        for producto in self.inventario:\n",
-    "            valor_total_inventario += producto[precio] * producto [cantidad]\n",
-    "            return\n",
-    "\n",
+    "            valor_total_inventario += producto[\"precio\"] * producto [\"cantidad\"]\n",
+    "        return valor_total_inventario\n",
+    "    \n",
     "\n",
     "# 7 Realizar compra:\n",
     "\n",
@@ -150,12 +146,166 @@
     "                        # actualizar el inventario\n",
     "                        producto[\"cantidad\"] -= cantidad_elegida\n",
     "\n",
+    "                    else:\n",
+    "                        print(f\"No hay suficiente stock de {producto_elegido}. Solo quedan {producto['cantidad']} unidades.\")\n",
+    "                    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c0ae722a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Producto: patin, Precio: 95, Cantidad: 50\n",
+      "Producto: bota, Precio: 105, Cantidad: 60\n",
+      "Producto: stick, Precio: 75, Cantidad: 240\n",
+      "Producto: bola, Precio: 14, Cantidad: 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1 Agregar producto\n",
     "\n",
-    "                \n",
-    "        \n",
+    "tienda = TiendaOnline()\n",
     "\n",
-    "            \n",
-    "\n"
+    "tienda.agregar_producto(\"patin\", 95, 50)\n",
+    "tienda.agregar_producto(\"bota\", 105, 60)\n",
+    "tienda.agregar_producto(\"stick\", 75, 120)\n",
+    "tienda.agregar_producto(\"bola\", 14, 190)\n",
+    "tienda.agregar_producto(\"stick\", 20, 120)\n",
+    "\n",
+    "for producto in tienda.inventario:\n",
+    "    print(f\"Producto: {producto['nombre']}, Precio: {producto['precio']}, Cantidad: {producto['cantidad']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3cf0f054",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: patin, Precio: 95, Cantidad: 50\n",
+      "Nombre: bota, Precio: 105, Cantidad: 60\n",
+      "Nombre: stick, Precio: 75, Cantidad: 240\n",
+      "Nombre: bola, Precio: 14, Cantidad: 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2 Solicitamos ver el inventario\n",
+    "\n",
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8a9519d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: bola, Precio: 14, Cantidad: 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 Buscamos si disponemos el producto \"bola\"\n",
+    "\n",
+    "tienda.buscar_producto(\"bola\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e9a0bbaf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: patin, Precio: 95, Cantidad: 75\n",
+      "Nombre: bota, Precio: 105, Cantidad: 60\n",
+      "Nombre: stick, Precio: 75, Cantidad: 240\n",
+      "Nombre: bola, Precio: 14, Cantidad: 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4 Actualizar stock\n",
+    "\n",
+    "tienda.actualizar_stock(\"patin\", 25)\n",
+    "\n",
+    "tienda.ver_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "bd0088ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: patin, Precio: 95, Cantidad: 75\n",
+      "Nombre: stick, Precio: 75, Cantidad: 240\n",
+      "Nombre: bola, Precio: 14, Cantidad: 190\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5 Eliminar un producto\n",
+    "\n",
+    "tienda.eliminar_producto(\"bota\")\n",
+    "\n",
+    "tienda.ver_inventario()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2711e087",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27785"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 6 Calcular valor inventario\n",
+    "\n",
+    "tienda.calcular_valor_inventario()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e318832",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7 Realizar compra"
    ]
   }
  ],
