cambios hasta ej 7

--- a/bda-modulo-1-evaluacion-final-irurme.ipynb
+++ b/bda-modulo-1-evaluacion-final-irurme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "id": "3eb1ffea",
    "metadata": {},
    "outputs": [],
@@ -25,6 +25,7 @@
     "\n",
     "    def agregar_producto(self, nombre, precio, cantidad):\n",
     "\n",
+    "            # recorremos el inventario\n",
     "            for producto in self.inventario:\n",
     "\n",
     "                # si ya existe, actualizamos la cantidad\n",
@@ -107,8 +108,10 @@
     "\n",
     "        # recorremos el inventario\n",
     "        for producto in self.inventario:\n",
-    "            valor_total_inventario += producto[\"precio\"] * producto [\"cantidad\"]\n",
-    "        return valor_total_inventario\n",
+    "            valor_producto = producto[\"precio\"] * producto [\"cantidad\"]\n",
+    "            valor_total_inventario += valor_producto\n",
+    "\n",
+    "        return print(f\"El valor total del inventario es {valor_total_inventario}\")\n",
     "    \n",
     "\n",
     "# 7 Realizar compra:\n",
@@ -116,44 +119,62 @@
     "    def realizar_compra(self):\n",
     "\n",
     "        # creamos una varioable para el carrito donde añadiremos el nombre del producto y la cantidad de compra\n",
-    "        carrito_vacio = {}\n",
+    "        carrito = {}\n",
+    "\n",
+    "        coste_compra = 0\n",
+    "        # muestramostramos el inventario\n",
+    "        self.ver_inventario()\n",
+    "        print()\n",
+    "\n",
+    "        # solicitamos al cliente los productos que desea o si desea finalizar la compra\n",
+    "        producto_elegido = input(\"Por favor, indique el nombre del producto que desea comprar o 'salir' si desea salir de la compra\").lower()\n",
     "\n",
     "        # el cliente puede ir agregando productos hasta que indique \"salir\"\n",
-    "        while True:\n",
-    "            # muestramostramos el inventario\n",
-    "            self.ver_inventario()\n",
-    "\n",
-    "            # solicitamos al cliente los productos que desea o si desea finalizar la compra\n",
-    "            producto_elegido = input(\"Por favor, indique el nombre del producto que desea comprar o 'salir' si desea salir de la compra\")\n",
-    "\n",
-    "            # si desea finalizar la compra\n",
-    "            if producto_elegido == \"salir\":\n",
-    "                break\n",
+    "        while producto_elegido != \"salir\":\n",
     "\n",
     "            for producto in self.inventario:\n",
     "\n",
     "                if producto_elegido == producto[\"nombre\"]:\n",
-    "                    # si desea incluir productos al carrito\n",
+    "                    # solicitamos la cantidad que desea adquirir de cada producto\n",
     "                    cantidad_elegida = int(input(\"Por favor, indique la cantidad de producto que desea comprar\"))\n",
     "                    \n",
-    "                    if cantidad_elegida <= producto_elegido[\"cantidad\"]:\n",
-    "                        # Actualizar el carrito\n",
-    "                        if producto_elegido in carrito_vacio:\n",
-    "                            carrito_vacio[producto_elegido] += cantidad_elegida\n",
-    "                        else:\n",
-    "                            carrito_vacio[producto_elegido] = cantidad_elegida\n",
+    "                    if cantidad_elegida > producto[\"cantidad\"]:\n",
+    "                        print(f\"No hay suficiente stock de {producto_elegido}. Solo quedan {producto['cantidad']} unidades.\")\n",
     "\n",
+    "                    else:\n",
     "                        # actualizar el inventario\n",
     "                        producto[\"cantidad\"] -= cantidad_elegida\n",
     "\n",
-    "                    else:\n",
-    "                        print(f\"No hay suficiente stock de {producto_elegido}. Solo quedan {producto['cantidad']} unidades.\")\n",
-    "                    break"
+    "                        # Actualizar el carrito de la compra\n",
+    "                        if producto_elegido in carrito:\n",
+    "                            carrito[producto_elegido] += cantidad_elegida\n",
+    "                        else:\n",
+    "                            carrito.update({producto_elegido:cantidad_elegida})\n",
+    "\n",
+    "                        print(f\"Has añadido: {producto_elegido}. Cantidad: {cantidad_elegida}\")\n",
+    "\n",
+    "            producto_elegido = input(\"¿Deseas añadir algo más al carrito?\")\n",
+    "\n",
+    "            if producto_elegido == \"salir\":\n",
+    "                break                        \n",
+    "\n",
+    "        # recorremos el carrito\n",
+    "        for producto_en_carrito in carrito:\n",
+    "            # recorremos el inventario\n",
+    "            for producto in self.inventario:\n",
+    "                if producto_en_carrito == producto[\"nombre\"]:\n",
+    "                    coste_compra += cantidad_elegida * producto[\"precio\"]\n",
+    "\n",
+    "        print()\n",
+    "        print(f\"Compra finalizada. El coste total de su compra es {coste_compra}\")\n",
+    "        return print(f\"La compra realizada ha sido: {carrito}\")\n",
+    "\n",
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "c0ae722a",
    "metadata": {},
    "outputs": [
@@ -185,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "3cf0f054",
    "metadata": {},
    "outputs": [
@@ -208,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "8a9519d2",
    "metadata": {},
    "outputs": [
@@ -228,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "e9a0bbaf",
    "metadata": {},
    "outputs": [
@@ -253,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "id": "bd0088ae",
    "metadata": {},
    "outputs": [
@@ -277,19 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "id": "2711e087",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "27785"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El valor total del inventario es 27785\n"
+     ]
     }
    ],
    "source": [
@@ -300,12 +318,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2e318832",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: patin, Precio: 95, Cantidad: 75\n",
+      "Nombre: stick, Precio: 75, Cantidad: 240\n",
+      "Nombre: bola, Precio: 14, Cantidad: 190\n",
+      "\n",
+      "No hay suficiente stock de patin. Solo quedan 75 unidades.\n",
+      "Has añadido: stick. Cantidad: 5\n",
+      "Has añadido: stick. Cantidad: 5\n",
+      "Has añadido: bola. Cantidad: 20\n",
+      "\n",
+      "Compra finalizada. El coste total de su compra es 1780\n",
+      "La compra realizada ha sido: {'stick': 10, 'bola': 20}\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7 Realizar compra"
+    "# 7 Realizar compra\n",
+    "\n",
+    "tienda.realizar_compra()"
    ]
   }
  ],
