cambios hasta ej 10

--- a/bda-modulo-1-evaluacion-final-irurme.ipynb
+++ b/bda-modulo-1-evaluacion-final-irurme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "3eb1ffea",
    "metadata": {},
    "outputs": [],
@@ -169,12 +169,61 @@
     "        print(f\"Compra finalizada. El coste total de su compra es {coste_compra}\")\n",
     "        return print(f\"La compra realizada ha sido: {carrito}\")\n",
     "\n",
+    "\n",
+    "# 8 Procesar pago:\n",
+    "\n",
+    "    def procesar_pago(self):\n",
+    "\n",
+    "        try:\n",
+    "            cantidad_a_pagar = float(input(\"Por favor, introduce el importe total de la compra\"))\n",
+    "            cantidad_entregada = float(input(\"Introduce la cantidad entregada por el cliente\"))\n",
+    "\n",
+    "            # si la cantidad entregada es insuficiente\n",
+    "            if cantidad_entregada < cantidad_a_pagar:\n",
+    "                print(f\"La cantidad entregada es insufiente\")\n",
+    "                return\n",
+    "\n",
+    "            # si es suficiente se entrega el siguiente cambio\n",
+    "            cambio = cantidad_entregada - cantidad_a_pagar\n",
+    "            print(f\"El pago se ha realizado con éxito. El cambio asciende a: {cambio}€\")\n",
+    "        \n",
+    "\n",
+    "        except:\n",
+    "            print(f\"Has intriducido un número erróneo. Por favor, ingrese un número válido\")\n",
+    "\n",
+    "\n",
+    "# 9 Agregar cliente:\n",
+    "\n",
+    "    def agregar_cliente(self, nombre, email):\n",
+    "\n",
+    "        # Verificar si el nombre ya existe en el registro de clientes.\n",
+    "        if nombre in self.clientes:\n",
+    "            print(f\"El cliente ya está registrado.\")\n",
+    "            return\n",
+    "        \n",
+    "        # si es nuevo cliente\n",
+    "        nuevo_cliente = {\"nombre\": nombre, \"email\": email, \"compras\": []}\n",
+    "\n",
+    "        # añadimos el cliente al diccionario\n",
+    "        self.clientes.update({nombre : nuevo_cliente})\n",
+    "\n",
+    "\n",
+    "# 10 Ver clientes:\n",
+    "\n",
+    "    def ver_clientes(self):\n",
+    "        \n",
+    "        # para recorrer los elementos de cada cliente \n",
+    "        for cliente in self.clientes.values():\n",
+    "            print(f\"Nombre: {cliente['nombre']}, correo eléctronico: {cliente['email']}\")\n",
+    "\n",
+    "\n",
+    "            \n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "c0ae722a",
    "metadata": {},
    "outputs": [
@@ -206,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "3cf0f054",
    "metadata": {},
    "outputs": [
@@ -229,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "8a9519d2",
    "metadata": {},
    "outputs": [
@@ -249,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "e9a0bbaf",
    "metadata": {},
    "outputs": [
@@ -274,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "bd0088ae",
    "metadata": {},
    "outputs": [
@@ -298,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "2711e087",
    "metadata": {},
    "outputs": [
@@ -344,6 +393,91 @@
     "# 7 Realizar compra\n",
     "\n",
     "tienda.realizar_compra()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d7744477",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El pago se ha realizado con éxito. El cambio asciende a: 300.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8 Procesar pago\n",
+    "\n",
+    "tienda.procesar_pago()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "d9161fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nombre': 'Marta', 'email': 'marta820724@gmail.com', 'compras': []}\n",
+      "{'nombre': 'Patricia', 'email': 'Ilvico37@gmail.com', 'compras': []}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9 Agregar cliente\n",
+    "\n",
+    "tienda.agregar_cliente(\"Marta\", \"marta820724@gmail.com\") \n",
+    "tienda.agregar_cliente(\"Patricia\", \"Ilvico37@gmail.com\")\n",
+    "\n",
+    "# para imprimir cada cliente en una línea\n",
+    "for cliente in tienda.clientes.values():\n",
+    "    print(cliente)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ad8b25f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El cliente ya está registrado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tienda.agregar_cliente(\"Marta\", \"marta820724@gmail.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6c83e4e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre: Marta, correo eléctronico: marta820724@gmail.com\n",
+      "Nombre: Patricia, correo eléctronico: Ilvico37@gmail.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10 Ver clientes\n",
+    "\n",
+    "tienda.ver_clientes()"
    ]
   }
  ],
