cambios hasta ej 13

--- a/bda-modulo-1-evaluacion-final-irurme.ipynb
+++ b/bda-modulo-1-evaluacion-final-irurme.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3eb1ffea",
    "metadata": {},
    "outputs": [],
@@ -217,13 +217,78 @@
     "            print(f\"Nombre: {cliente['nombre']}, correo eléctronico: {cliente['email']}\")\n",
     "\n",
     "\n",
-    "            \n",
+    "# 11 Registrar compra:\n",
+    "\n",
+    "    def registrar_compra(self, nombre_cliente, carrito):\n",
+    "\n",
+    "        # verificamos si el cliente está registrado\n",
+    "        if nombre_cliente not in self.clientes:      # verifica si existe la clave en el diccionario self.clientes\n",
+    "            print(f\"No es posible registrar la compra. El cliente no se encuentra en la lista de clientes\")\n",
+    "            return\n",
+    "        \n",
+    "\n",
+    "        # busca en el diccionario de clientes el cliente que tiene el nombre nombre_cliente y guarda su información en la variable cliente.\n",
+    "        cliente = self.clientes[nombre_cliente]\n",
+    "\n",
+    "        total_compra = 0\n",
+    "\n",
+    "        # recorrer el carrito y calcular el total de la compra\n",
+    "        for elementos in carrito.values():\n",
+    "\n",
+    "            precio_producto = elementos[\"precio\"]\n",
+    "            cantidad_producto = elementos[\"cantidad\"]\n",
+    "\n",
+    "            total_compra += precio_producto * cantidad_producto\n",
+    "\n",
+    "        # registrar la compra en el historial del cliente\n",
+    "        cliente[\"compras\"].append({\"productos\": carrito, \"total\": total_compra})\n",
+    "        \n",
+    "        # Actualizar las ventas totales\n",
+    "        self.ventas_totales += total_compra\n",
+    "\n",
+    "        # mensaje de confirmación\n",
+    "        print(f\"{nombre_cliente} ha realizado una compra por valor de {total_compra}€.\")\n",
+    "\n",
+    "        print(f\"Las ventas totales de la tienda son: {self.ventas_totales}€\")\n",
+    "\n",
+    "\n",
+    "# 12 Ver compras clientes:\n",
+    "\n",
+    "    def ver_compras_cliente(self, nombre_cliente):\n",
+    "\n",
+    "        # busca en el diccionario de clientes el cliente que tiene el nombre nombre_cliente y guarda su información en la variable cliente.\n",
+    "        cliente = self.clientes[nombre_cliente]\n",
+    "\n",
+    "        print(cliente[\"compras\"])\n",
+    "\n",
+    "\n",
+    "# 13 Calcular ventas totales:\n",
+    "\n",
+    "    def calcular_ventas_totales(self): \n",
+    "\n",
+    "        total_ventas = 0\n",
+    "\n",
+    "        # recorremos los elemento de cada cliente\n",
+    "        for cliente in self.clientes.values():\n",
+    "\n",
+    "            # Obtenemos las compras del cliente, que son una lista de diccionarios\n",
+    "            compras = cliente.get(\"compras\", [])  \n",
+    "\n",
+    "            # recorremos las compras\n",
+    "            for compra in compras:\n",
+    "\n",
+    "                # Extraemos el total de cada compra y lo sumamos al total general\n",
+    "                total_cliente = compra.get(\"total\", 0)\n",
+    "                total_ventas += total_cliente\n",
+    "\n",
+    "        print(f\"Ventas totales de la tienda: {total_ventas}\")\n",
+    "\n",
     "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c0ae722a",
    "metadata": {},
    "outputs": [
@@ -255,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "3cf0f054",
    "metadata": {},
    "outputs": [
@@ -278,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "8a9519d2",
    "metadata": {},
    "outputs": [
@@ -298,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "e9a0bbaf",
    "metadata": {},
    "outputs": [
@@ -323,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "bd0088ae",
    "metadata": {},
    "outputs": [
@@ -347,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2711e087",
    "metadata": {},
    "outputs": [
@@ -417,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "d9161fa8",
    "metadata": {},
    "outputs": [
@@ -443,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "ad8b25f7",
    "metadata": {},
    "outputs": [
@@ -461,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "6c83e4e9",
    "metadata": {},
    "outputs": [
@@ -478,6 +543,143 @@
     "# 10 Ver clientes\n",
     "\n",
     "tienda.ver_clientes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "769361ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No es posible registrar la compra. El cliente no se encuentra en la lista de clientes\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11 Registrar compra\n",
+    "\n",
+    "carrito_cliente1 = {\"patin\": {\"precio\": 95, \"cantidad\": 5}, \n",
+    "                    \"bola\": {\"precio\": 14, \"cantidad\": 325}}\n",
+    "\n",
+    "tienda.registrar_compra(\"Marina\", carrito_cliente1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b08761f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marta ha realizado una compra por valor de 137€.\n",
+      "Las ventas totales de la tienda son: 137.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "carrito_cliente2 = {\"patin\": {\"precio\": 95, \"cantidad\": 1}, \n",
+    "                    \"bola\": {\"precio\": 14, \"cantidad\": 3}}\n",
+    "\n",
+    "tienda.registrar_compra(\"Marta\", carrito_cliente2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3542d256",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Patricia ha realizado una compra por valor de 1100€.\n",
+      "Las ventas totales de la tienda son: 1237.0€\n"
+     ]
+    }
+   ],
+   "source": [
+    "carrito_cliente3 = {\"stick\": {\"precio\": 75, \"cantidad\": 10}, \n",
+    "                    \"bola\": {\"precio\": 14, \"cantidad\": 25}}\n",
+    "\n",
+    "tienda.registrar_compra(\"Patricia\", carrito_cliente3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "e9219dbc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'productos': {'stick': {'precio': 75, 'cantidad': 10}, 'bola': {'precio': 14, 'cantidad': 25}}, 'total': 1100}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12 Ver compras clientes\n",
+    "\n",
+    "tienda.ver_compras_cliente(\"Patricia\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "147cc23b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Marta': {'nombre': 'Marta',\n",
+       "  'email': 'marta820724@gmail.com',\n",
+       "  'compras': [{'productos': {'patin': {'precio': 95, 'cantidad': 1},\n",
+       "     'bola': {'precio': 14, 'cantidad': 3}},\n",
+       "    'total': 137}]},\n",
+       " 'Patricia': {'nombre': 'Patricia',\n",
+       "  'email': 'Ilvico37@gmail.com',\n",
+       "  'compras': [{'productos': {'stick': {'precio': 75, 'cantidad': 10},\n",
+       "     'bola': {'precio': 14, 'cantidad': 25}},\n",
+       "    'total': 1100}]}}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tienda.clientes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "2b2e04f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ventas totales de la tienda: 1237\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 13 Calcular ventas totales\n",
+    "\n",
+    "tienda.calcular_ventas_totales()"
    ]
   }
  ],
